--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jasmine"
+    "test": "node spec/jasmine-runner.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,8 @@
   "homepage": "https://github.com/daraosn/hapi-rest-methods#readme",
   "devDependencies": {
     "hapi": "^13.3.0",
-    "jasmine": "^2.4.1"
+    "jasmine": "^2.4.1",
+    "jasmine-spec-reporter": "^2.4.0",
+    "request": "^2.71.0"
   }
 }
